--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using BlazorBootstrap
 
 <PageTitle>OrdersReaderBlazorApp</PageTitle>
 
@@ -22,3 +23,4 @@
     </main>
 </div>
 
+<Preload />
