--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+/* @import url('bootstrap/bootstrap.min.css'); */
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -67,3 +68,23 @@ a, .btn-link {
         content: "An error has occurred."
     }
 
+
+/* ============= */
+/*    custom
+/* ============= */
+
+.bg-green {
+    background-color: rgba(60,198,134, 1) !important;
+}
+
+.bg-red {
+    background-color: rgba(248,104,90, 1) !important;
+}
+
+.bg-orange {
+    background-color: rgba(249,148,90, 1) !important;
+}
+
+.bg-gray {
+    background-color: rgba(171,168,165, 1) !important;
+}
