--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -37,6 +37,7 @@
     <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
 
     <script src="ShopsGrid.js"></script>
+    <script src="TerminalsGrid.js"></script>
 
 </body>
 </html>
